[project]
name = "researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-mistralai>=1.1.2",
    "langchain-tavily>=0.2.17",
    "python-docx>=1.2.0",
    "reportlab>=4.4.10",
]
